[gd_scene load_steps=4 format=3 uid="uid://c1o5v205ixx2t"]

[ext_resource type="Script" uid="uid://ca3s20ddiux8p" path="res://game.gd" id="1_80nbo"]
[ext_resource type="PackedScene" path="res://texture_rect.tscn" id="2_fc0e3"]
[ext_resource type="Texture2D" uid="uid://cn1ric8te6wft" path="res://Assets/d6.png" id="2_feb5d"]

[node name="Game" type="Node2D"]
script = ExtResource("1_80nbo")
metadata/_edit_horizontal_guides_ = [1023.0]
metadata/_edit_vertical_guides_ = [985.0, -1336.0]

[node name="PointsLabel" type="Label" parent="."]
offset_left = 817.0
offset_top = 205.0
offset_right = 1163.0
offset_bottom = 342.0
horizontal_alignment = 1
vertical_alignment = 1
text_direction = 3

[node name="FinalLabel" type="Label" parent="."]
offset_left = 813.0
offset_top = 399.0
offset_right = 1159.0
offset_bottom = 536.0
horizontal_alignment = 1
vertical_alignment = 1
text_direction = 3

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_right = 41.0
offset_bottom = 40.0

[node name="Button_play" type="Button" parent="."]
offset_left = 1512.0
offset_top = 904.0
offset_right = 1869.0
offset_bottom = 1023.0
text = "Play"
icon_alignment = 1

[node name="Button_drop" type="Button" parent="."]
offset_left = 1104.0
offset_top = 904.0
offset_right = 1461.0
offset_bottom = 1023.0
text = "Drop"
icon_alignment = 1

[node name="Button1" type="Button" parent="."]
offset_left = 86.0
offset_top = 805.0
offset_right = 318.0
offset_bottom = 1023.0
text = "d6"

[node name="Button2" type="Button" parent="."]
offset_left = 405.0
offset_top = 805.0
offset_right = 637.0
offset_bottom = 1023.0
text = "d6"

[node name="Button3" type="Button" parent="."]
offset_left = 709.0
offset_top = 804.0
offset_right = 941.0
offset_bottom = 1022.0
text = "d6"

[node name="Devoloper tools" type="Button" parent="."]
offset_left = 28.0
offset_top = 27.0
offset_right = 256.0
offset_bottom = 62.0
text = "Devoloper tools +600 points"

[node name="LabelRound" type="Label" parent="."]
offset_left = 893.0
offset_top = 61.0
offset_right = 1079.0
offset_bottom = 172.0

[node name="TextureRect" parent="." instance=ExtResource("2_fc0e3")]
offset_left = 89.0
offset_top = 660.0
offset_right = 189.0
offset_bottom = 760.0
texture = ExtResource("2_feb5d")

[node name="TextureRect2" parent="." instance=ExtResource("2_fc0e3")]
offset_left = 235.0
offset_top = 660.0
offset_right = 335.0
offset_bottom = 760.0

[node name="TextureRect3" parent="." instance=ExtResource("2_fc0e3")]
offset_left = 376.0
offset_top = 661.0
offset_right = 476.0
offset_bottom = 761.0

[node name="TextureRect4" parent="." instance=ExtResource("2_fc0e3")]
offset_left = 512.0
offset_top = 661.0
offset_right = 612.0
offset_bottom = 761.0

[node name="TextureRect5" parent="." instance=ExtResource("2_fc0e3")]
offset_left = 645.0
offset_top = 661.0
offset_right = 745.0
offset_bottom = 761.0

[connection signal="pressed" from="Button_play" to="." method="_on_button_play_pressed"]
[connection signal="pressed" from="Button_drop" to="." method="_on_button_drop_pressed"]
[connection signal="button_down" from="Button1" to="." method="_on_button_1_button_down"]
[connection signal="pressed" from="Devoloper tools" to="." method="_on_devoloper_tools_pressed"]
